# cs2337-inclass-1

./: .gitignore  CMakeLists.txt  Document.cpp  Document.h  Email.cpp  Email.h  File.cpp  File.h  main.cpp
